# i2c-esp-idf

./: CLAUDE.md  README.md  RESEARCH.md  TODO.md
T-Display-S3/: README.md  platformio.ini
a-node/: a-node.ino
dom/: CMakeLists.txt  README.md  main.c  sdkconfig  sdkconfig.defaults  sdkconfig.old
dom/main/: CMakeLists.txt  ap_database.c  ap_database.h  constants.h  i2c_master.c  i2c_master.h  i2c_messages.c  i2c_messages.h  main.c  spi_master.c  spi_master.h  spi_messages.c  spi_messages.h  sub_manager.c  sub_manager.h  types.h
esp-scan-client/: esp-scan-client.ino
esp32-multi-connect-ble-client/: README.md  sdkconfig
esp32-multi-connect-ble-client/main/: CMakeLists.txt  ble.h  button.c  button.h  constants.h  data.c  data.h  device_config.c  device_config.h  devices.c  devices.h  display_controller.c  display_controller.h  events.c  events.h  gap.c  gap.h  gattc.c  gattc.h  i2c_master.c  i2c_master.h  i2c_messages.c  i2c_messages.h  led.c  led.h  main.c  preferences.c  preferences.h  types.h  ui.c  ui.h  uuid128.c  uuid128.h
gattc_multi_connect/: sdkconfig
gattc_multi_connect/main/: devices.c  (+16 more)
main-node/: README.md  WALKTHROUGH.md  sdkconfig
nrf-peripherals/: nrf-peripherals.ino
nrf-sensor-server/: README.md  a-node.ino  battery.ino  leds.ino  nrf-sensor-server.ino
pico-dom/: CMakeLists.txt  README.md  main.c
sleeper/: sleeper.ino  sleeping.ino
sub/: CMakeLists.txt  README.md  erase_nvs.sh  sdkconfig  sdkconfig.defaults
utils/: log_serial.py  send_inquiry.py
wifi-node/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.old
(+75 files in other folders)
