idf_component_register(SRCS "i2c_messages.c" "events.c" "i2c_master.c" "device_config.c" "data.c" "ble.c" "ui.c" "preferences.c" "button.c" "led.c" "main.c" "gap.c" "gattc.c" "devices.c" "uuid128.c" "led.c" "button.c" "preferences.c" "ui.c" "ble.c" "data.c" "device_config.c" "i2c_master.c" "events.c"
                    INCLUDE_DIRS ".")
